--- a/style.css
+++ b/style.css
@@ -25,13 +25,13 @@ body{
   padding: 10px;
   border-radius: 30px;
   border: 1px solid white;
+  text-align: center;
 }
 .Calculator input{
-  width: 320px;
-  font-size: 50px;
+  width: 330px;
+  font-size: 70px;
   padding: 24px;
   margin: 10px;
-  border-radius: 5px;
   border: none;
   text-align: right;
   background: transparent;
@@ -55,9 +55,10 @@ button{
   color: var(--textColor);
   transition: .5s;
 }
+/*
 button:hover{
   background: rgba(255, 99, 71, 0.212);
-}
+}*/
 .equal{
   width: 142px;
   background: #f0932b;
@@ -77,4 +78,15 @@ button:hover{
 }
 .change:hover{
   background: #bdc3c7;
+}
+@media screen and (max-width:767px) and (min-width:250px){
+  .Calculator input{
+    font-size: 60px;
+    padding: 50px 24px;
+  }
+  .Calculator{
+  height: 100vh;
+  width: 100vh;
+  border-radius: 0;
+  }
 }
